Edited wiki page QuickStart through web user interface.

--- a/wiki/QuickStart.wiki
+++ b/wiki/QuickStart.wiki
@@ -10,7 +10,7 @@ This is the procedure for compiling and running Geant4 spacal code on lxplus mac
 > ssh lxplus6.cern.ch
 
 you just need to source the following scripts and to set the following variables to setup an appropriate environment:
-<code language="bash">
+<code language="sh">
 export SCRAM_ARCH=x86_64-slc6-gcc46
 source /afs/cern.ch/sw/lcg/contrib/gcc/4.6/x86_64-slc6/setup.sh
 source /afs/cern.ch/sw/lcg/external/geant4/9.6.p03/x86_64-slc6-gcc46-opt/CMake-setup.sh
