--- a/wiki/QuickStart.wiki
+++ b/wiki/QuickStart.wiki
@@ -8,11 +8,9 @@ This is the procedure for compiling and running Geant4 spacal code on lxplus mac
 1) All the necessary libraries and compiler versions are already installed on lxplus machines running 64-bit SLC6, thus after logging on, like this:
 
 > ssh lxplus6.cern.ch
-{{{
-export PS1='\[\e[31;1m\][ \[\e[32;1m\]\h.\u \[\e[31;1m\]\W ]>\[\e[m\] '
-}}}
+
 you just need to source the following scripts and to set the following variables to setup an appropriate environment:
-<code language="sh">
+<code language="bash">
 export SCRAM_ARCH=x86_64-slc6-gcc46
 source /afs/cern.ch/sw/lcg/contrib/gcc/4.6/x86_64-slc6/setup.sh
 source /afs/cern.ch/sw/lcg/external/geant4/9.6.p03/x86_64-slc6-gcc46-opt/CMake-setup.sh
