--- a/wiki/QuickStart.wiki
+++ b/wiki/QuickStart.wiki
@@ -50,7 +50,7 @@ Note1: If you do not want to type this long path,  in your .bashrc  set a variab
 {{{
    export g4Dir="/afs/cern.ch/sw/lcg/external/geant4/9.6.p03/x86_64-slc6-gcc46-opt/lib64/Geant4-9.6.3"
 }}}
-than you can run cake as:
+than you can run cmake as:
 {{{
    cmake -DGeant4_DIR=$g4Dir /path_to/your_source_code/
 }}}
