--- a/wiki/QuickStart.wiki
+++ b/wiki/QuickStart.wiki
@@ -1,7 +1,7 @@
-#Building the code on lxplus
 
+#summary One-sentence summary of this page.
 = Introduction =
-
+#Building the code on lxplus
 This is the procedure for compiling and running Geant4 spacal code on lxplus machines with 64-bit SLC6.
 
 = Details =
